# problems

./: CHANGELOG.md  CONTRIBUTION.md  LICENSE  Procfile  README.md  problems.md  pyproject.toml  requirements.txt
docs/: configuration-fr.md  learning-path.md  structure_projet_python.md
src/problems/: anagram.py  fibonacci.py  interface.py  knapsack.py  nqueens.py  palindrome.py  scripts.py
src/problems/inside_test/: anagram_test.py  fibonacci_test.py  knapsack_test.py  nqueens_test.py  palindrome_test.py  util.py
src/problems/inside_test/data/: knapsack.jsonl
src/problems/inside_test/data/anagram/bad/: word2.txt
src/problems/inside_test/data/anagram/good/: long_word2.txt
src/problems/templates/: base.html  index.html  preview-template.html  problem.html
tests/: anagram.ipynb  test_anagram.py  test_fibonacci.py  test_knapsack.py  test_nqueens.py  test_palindrome.py
tests/data/anagram/good/: long_word1.txt  word2.txt
