[tool.poetry]
name = "Problems"
version = "0.1.0"
description = "Set of problems to solve"
authors = ["Hugues DTANKOUO <huguesdtankouo@gmail.com>"]
readme = "README.md"
packages = [{ include = "problems", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
gunicorn = "^23.0.0"
poetry-plugin-export = "^1.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
ruff = "^0.3.2"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["A", "B", "E", "F", "I", "N", "W", "INP"]
line-length = 120
exclude = [
    ".venv",
    "build",
]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=problems --cov-report=term-missing --cov-config=.coveragerc --cov-context=test"
testpaths = ["tests"]

[tool.coverage.run]
source = ["problems"]
branch = true
parallel = true
relative_files = true
omit = [
    "src/problems/scripts.py",
    "src/problems/interface.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.poetry.scripts]
lint = "problems.scripts:run_lint"
tests = "problems.scripts:run_tests"
check = "problems.scripts:run_all_checks"
server = "problems.scripts:run_server"